// This is your Prisma schema file,
// learn more about it in the docs: https://pris.ly/d/prisma-schema

generator client {
  provider = "prisma-client-js"
}

generator dbml {
  provider = "prisma-dbml-generator"
}

datasource db {
  provider = "mysql"
  url      = env("DATABASE_URL")
}

enum Gender {
  L
  P
}

enum AksesGuru {
  ADMIN
  WALAS
}

enum TingkatKelas {
  X
  XI
  XII
}

enum SemesterType {
  GANJIL
  GENAP
}

enum TindakanLanjutan {
  mengikuti_kbm
  rujukan
  pulang
}

model Siswa {
  id       Int           @id @default(autoincrement()) @map("siswa_id")
  email    String        @unique
  name     String
  gender   Gender
  password String?       @db.Char(32)
  register Register[]
  rombel   RombelSiswa[]
}

model Guru {
  id       String           @id @map("guru_id") @db.Char(36)
  email    String           @unique
  name     String
  akses    AksesGuru
  password String?          @db.Char(32)
  rombel   Rombel[]
  register DetailRegister[]
}

model Kelas {
  id         String       @id @map("kelas_id") @db.Char(6)
  nama_kelas String
  tingkat    TingkatKelas
  rombel     Rombel[]
}

model Semester {
  id           String       @id @map("semester_id") @db.Char(11)
  tahun_ajaran String
  semester     SemesterType
  tgl_awal     DateTime     @db.Date
  tgl_akhir    DateTime     @db.Date
  rombel       Rombel[]
}

model Rombel {
  id          String        @id @map("rombel_id") @db.Char(11)
  kelas       Kelas         @relation(fields: [kelas_id], references: [id])
  kelas_id    String        @db.Char(6)
  semester    Semester      @relation(fields: [semester_id], references: [id])
  semester_id String        @db.Char(11)
  guru        Guru          @relation(fields: [guru_id], references: [id])
  guru_id     String        @db.Char(36)
  siswa       RombelSiswa[]
}

model Register {
  id              String          @id @map("register_id") @db.Char(36)
  siswa           Siswa           @relation(fields: [siswa_id], references: [id])
  siswa_id        Int
  tgl_periksa     DateTime        @db.Date
  detail_register DetailRegister?
}

model DetailRegister {
  id            String           @id @map("detail_register_id") @db.Char(36)
  register      Register         @relation(fields: [register_id], references: [id])
  register_id   String           @unique @db.Char(36)
  hasil_periksa String           @db.LongText
  analisa       String           @db.LongText
  tindakan      String           @db.LongText
  evaluasi      String           @db.LongText
  lanjutan      TindakanLanjutan
  guru          Guru             @relation(fields: [guru_id], references: [id])
  guru_id       String           @db.Char(36)
  rujukan       Rujukan?
}

model Rujukan {
  id                 String         @id @map("rujukan_id") @db.Char(36)
  detail_register    DetailRegister @relation(fields: [detail_register_id], references: [id])
  detail_register_id String         @unique @db.Char(36)
  analisa_dokter     String         @db.LongText
  nama_dokter        String         @db.VarChar(255)
}

model RombelSiswa {
  rombel    Rombel @relation(fields: [rombel_id], references: [id])
  rombel_id String @db.Char(11)
  siswa     Siswa  @relation(fields: [siswa_id], references: [id])
  siswa_id  Int

  @@id([rombel_id, siswa_id])
}
